tests/invalid/type/civildatetime_field_assignment_forbidden.pts
function main() : void {
    CivilDateTime dt = CivilDateTime.clone();
    dt.year = 2024;
}
